updated & unified the config across the cookiecutter projects

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,18 @@
+# OSX useful to ignore
+*.DS_Store
+.AppleDouble
+.LSOverride
 
-# Created by https://www.gitignore.io/api/windows,macos,linux,git,python
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
 
-.vscode/
-
-### Git ###
-*.orig
-
-### Linux ###
+# Linux
+._*
 *~
-
-# temporary files which can be created if a process still has a handle open of a deleted file
-.fuse_hidden*
 
 # KDE directory preferences
 .directory
@@ -21,18 +23,6 @@
 # .nfs files are created when an open file is removed but is still being accessed
 .nfs*
 
-### macOS ###
-# General
-.DS_Store
-.AppleDouble
-.LSOverride
-
-# Icon must end with two \r
-Icon
-
-# Thumbnails
-._*
-
 # Files that might appear in the root of a volume
 .DocumentRevisions-V100
 .fseventsd
@@ -42,18 +32,43 @@ Icon
 .VolumeIcon.icns
 .com.apple.timemachine.donotpresent
 
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
+# temporary files which can be created if a process still has a handle open of a deleted file
+.fuse_hidden*
 
-### Python ###
+# Windows thumbnail cache files
+Thumbs.db
+ehthumbs.db
+ehthumbs_vista.db
+
+# Dump file
+*.stackdump
+
+# Folder config file
+[Dd]esktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Windows Installer files
+*.cab
+*.msi
+*.msix
+*.msm
+*.msp
+
+# Windows shortcuts
+*.lnk
+
+# Git
+*.orig
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
+
+# Visual Studio
+.vscode/
 
 # C extensions
 *.so
@@ -136,6 +151,7 @@ celerybeat-schedule
 # Environments
 .env
 .venv
+.venv/
 env/
 venv/
 ENV/
@@ -155,33 +171,15 @@ venv.bak/
 # mypy
 .mypy_cache/
 
-### Python Patch ###
-.venv/
+# IntelliJ Idea family of suites
+.idea
+*.iml
+## File-based project format:
+*.ipr
+*.iws
+## mpeltonen/sbt-idea plugin
+.idea_modules/
 
-### Windows ###
-# Windows thumbnail cache files
-Thumbs.db
-ehthumbs.db
-ehthumbs_vista.db
-
-# Dump file
-*.stackdump
-
-# Folder config file
-[Dd]esktop.ini
-
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
-
-# Windows Installer files
-*.cab
-*.msi
-*.msix
-*.msm
-*.msp
-
-# Windows shortcuts
-*.lnk
-
-
-# End of https://www.gitignore.io/api/windows,macos,linux,git,python
+# Cookiecutter
+output/
+python_boilerplate/
