--- a/.travis.yml
+++ b/.travis.yml
@@ -1,61 +1,26 @@
-os: linux
-
-branches:
-  only:
-    - master
-    - develop
-
-sudo: false
-
 language: python
 
-matrix:
-  fast_finish: true
-  include:
-  - python: "2.7"
-  - python: "3.4"
-  - python: "3.5"
-  - python: "3.6"
-  - python: "3.7"
-    dist: xenial
-    sudo: true
+python: 3.7
+env:
+  - TOXENV=py27
+  - TOXENV=py33
+  - TOXENV=py34
+  - TOXENV=py35
+  - TOXENV=py37
 
-  - os: osx
-    language: generic
-    env: PYTHON=2.7.15
+install:
+  - pip install -U tox
 
-  - os: osx
-    language: generic
-    env: PYTHON=3.4.8
+script:
+  - tox
 
-  - os: osx
-    language: generic
-    env: PYTHON=3.5.5
-
-  - os: osx
-    language: generic
-    env: PYTHON=3.6.6
-
-  - os: osx
-    language: generic
-    env: PYTHON=3.7.0
-
-before_install: |
-  if [ "$TRAVIS_OS_NAME" == "osx" ]; then
-    brew update
-    brew install openssl readline
-    brew outdated pyenv || brew upgrade pyenv
-    brew install pyenv-virtualenv
-    pyenv install $PYTHON
-    export PYENV_VERSION=$PYTHON
-    export PATH="/Users/travis/.pyenv/shims:${PATH}"
-    pyenv-virtualenv venv
-    source venv/bin/activate
-    python --version
-  fi
-
-install: pip install -r requirements.txt
-
-script: invoke tests
-
-after_success: codecov
+deploy:
+  provider: pypi
+  distributions: sdist
+  user: audreyr
+  password:
+    secure: PLEASE_REPLACE_ME
+  on:
+    tags: true
+    repo: audreyr/python_boilerplate
+    condition: $TOXENV == py27
